# girlvoice-ui

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  math.rs  vis.rs
simulator/: Cargo.toml
simulator/src/: dsp.rs  main.rs
